--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <h1>About Me</h1>
       <p>
         성실과 인내로 혼자 공부하기 훈련을 하여 새로 입학하는 중학교에서 좋은 성적과 탐구 활동을
-        이루도록 노력한다. <br />
+        이루도록 노력한다!. <br />
         쉬면 죽는다 할아버지 말씀
       </p>
       <div class="about__majors">
