--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             </div>
           </a>
           <a
-            href=""
+            href="imgs/5-245-image.png"
             class="project"
             target="blank"
             data-type="Ryueae-work"
@@ -203,7 +203,7 @@
             <span>Daeyang Electronics</span>
           </div>
           <a
-            href=""
+            href="imgs/5-129-image.png"
             class="project"
             target="blank"
             data-type="Ryueae-work"
