--- a/index.html
+++ b/index.html
@@ -1,15 +1,7 @@
-<!--
-  Rui Santos
-  Complete project details at https://RandomNerdTutorials.com/esp32-mpu-6050-web-server/
-
-  Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files.
-  The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
--->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>ESPWebServer</title>
+    <title>Chol&Ryueae</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="ESP32_Ethernet_WebServer" />
@@ -69,9 +61,10 @@
           alt="Chol and Ryueae's profile photo"
           class="home__avartar"
         />
-        <h1 class="home__title">Hello, <br />We are GrandFa and GrandMa</h1>
+        <h1 class="home__title">Hello, GrandFa and GrandMa</h1>
         <h2 class="home__description">Engineer Electronics and architecture</h2>
-        <button class="home__contact">Contact Me</button>
+        
+        <button class="home__contact">Contact us</button>
       </div>
     </section>
 
@@ -97,13 +90,13 @@
           <div class="major__description">
            1977: Graduated from the Department of Architecture<br/>
            &emsp;&emsp;&emsp; at Hanyang University. <br/>
-           &emsp;&emsp;&emsp;and Studied at Kim Joong-up Architectural Studio.<br/>
-           1978: Participated in the architectural competition for the Gwacheon government</br>
-           &emsp;&emsp;&emsp; building status (2nd Prize, Jungil Architecture)<br/>
+           &emsp;&emsp;&emsp;Studied at Kim Joong-up Architectural Studio.<br/>
+           1978: Participated in the architectural competition for the Gwacheon</br> 
+           &emsp;&emsp;&emsp;government
+            building status (2nd Prize, Jungil Architecture)<br/>
            1995: Built first DaeYang Building(5-245, Hyochang-dong)<br/>
            2002: Build a temporary building in 5-129, Hyochang-dong<br/>
-           2004: Finally Built and has managed current DaeYang Building.
-          
+           2004: Finally Built and has managed current DaeYang Building.          
           </div>
         </div>
         <div class="major">
@@ -225,15 +218,18 @@
     <!-- <section id="testimonials" class="section"></section> -->
 
     <section id="contact" class="section">
-      <h1 class="contact__title">Let's contact</h1>
-      <h2 class="contact__email">dyscada@gmail.com</h2>
+      <h1 class="contact__title">FAMILY</h1>
+      <!-- <h2 class="contact__email">dyscada@gmail.com</h2> -->
       <div class="contact__links">
-        <a href="https://github.com/dyscada/EthWebServer" target="_blank">
-          <i class="fab fa-github"></i>
+        <a href="http://www.daeyang.org/Yonu" target="_blank">
+          <img src="imgs/yonu.png" alt="EIS" class="Yonu__avartar" />
         </a>
-        <a href="https://www.facebook.com/" target="_blank">
+        <a href="http://www.daeyang.org/Yonu" target="_blank">
+          <img src="imgs/yonu.png" alt="EIS" class="Yonu__avartar" />
+        </a>
+        <!-- <a href="https://www.facebook.com/" target="_blank">
           <i class="fab fa-facebook-square"></i>
-        </a>
+        </a> -->
       </div>
       <p class="contact__rights">2021 Chol and Ryueae - All rights reserved</p>
     </section>
