--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <div class="major__description">
             1977: After graduating from the Department of Communications<br/>
             &emsp;&emsp;&emsp;at Hanyang University<br/>
-            1981: Retiring as an officer of the Korean Air Force<br/>
+            1981: Retired as an officer of the Korean Air Force<br/>
             1982: Participated in the air force air defense project<br/>
             1986: Civil aviation control system project<br/>
             1988: Established Daeyang Electronics
@@ -224,12 +224,12 @@
         <a href="http://www.daeyang.org/Yonu" target="_blank">
           <img src="imgs/yonu.png" alt="EIS" class="Yonu__avartar" />
         </a>
-        <a href="http://www.daeyang.org/Yonu" target="_blank">
+        <a href="https://www.github.com/dyscada/yonu" target="_blank">
           <img src="imgs/yonu.png" alt="EIS" class="Yonu__avartar" />
         </a>
-        <!-- <a href="https://www.facebook.com/" target="_blank">
+        <a href="https://www.facebook.com/" target="_blank">
           <i class="fab fa-facebook-square"></i>
-        </a> -->
+        </a>
       </div>
       <p class="contact__rights">2021 Chol and Ryueae - All rights reserved</p>
     </section>
