--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <a href="http://www.daeyang.org/Yonu" target="_blank">
           <img src="imgs/yonu.png" alt="EIS" class="Yonu__avartar" />
         </a>
-        <a href="https://www.github.com/dyscada/yonu" target="_blank">
+        <a href="https://www.github.com/dyscada/dyscada.github.io" target="_blank">
           <img src="imgs/yonu.png" alt="EIS" class="Yonu__avartar" />
         </a>
         <a href="https://www.facebook.com/" target="_blank">
