--- a/index.html
+++ b/index.html
@@ -230,6 +230,9 @@
         <a href="https://www.facebook.com/" target="_blank">
           <i class="fab fa-facebook-square"></i>
         </a>
+        <a href="192.168.0.112" target="_blank">
+          <i class="fab fa-facebook-square"></i>
+        </a>
       </div>
       <p class="contact__rights">2021 Chol and Ryueae - All rights reserved</p>
     </section>
