--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
         <a href="https://www.facebook.com/" target="_blank">
           <i class="fab fa-facebook-square"></i>
         </a>
-        <a href="192.168.0.112" target="_blank">
-          <i class="fab fa-facebook-square"></i>
+        <a href="http://192.168.0.112" target="_blank">
+          <i class="fas fa-ethernet"></i>
         </a>
       </div>
       <p class="contact__rights">2021 Chol and Ryueae - All rights reserved</p>
