Family Photo upload

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
           <li class="navbar__menu__item active" data-link="#home">Home</li>
           <li class="navbar__menu__item" data-link="#about">About</li>
           <li class="navbar__menu__item" data-link="#work">Work</li>
-          <!-- <li class="navbar__menu__item" data-link="#skills">Skill</li> -->
           <li class="navbar__menu__item" data-link="#contact">Contact</li>
+          <li class="navbar__menu__item" data-link="#skills">Skill</li>
+          
         </ul>
       <!-- </div> -->
       <!-- Toogle button -->
@@ -221,11 +222,14 @@
       <h1 class="contact__title">FAMILY</h1>
       <!-- <h2 class="contact__email">dyscada@gmail.com</h2> -->
       <div class="contact__links">
-        <a href="http://www.daeyang.org/Yonu" target="_blank">
-          <img src="imgs/yonu.png" alt="EIS" class="Yonu__avartar" />
+        <a href="http://www.daeyang.org/Yeonu" target="_blank">
+          <img src="imgs/yeonu.png" alt="yeonu" class="Yeonu__avartar" />
         </a>
         <a href="https://www.github.com/dyscada/dyscada.github.io" target="_blank">
-          <img src="imgs/yonu.png" alt="EIS" class="Yonu__avartar" />
+          <img src="imgs/yeonjun.png" alt="yeonjun" class="Yeonjun__avartar" />
+        </a>
+        <a href="https://www.github.com/dyscada/dyscada.github.io" target="_blank">
+          <img src="imgs/taeyun.jpg" alt="taeyun" class="taeyun__avartar" />
         </a>
         <a href="https://www.facebook.com/" target="_blank">
           <i class="fab fa-facebook-square"></i>
