조연준 동영상 upload

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <a href="http://www.daeyang.org/Yeonu" target="_blank">
           <img src="imgs/yeonu.png" alt="yeonu" class="Yeonu__avartar" />
         </a>
-        <a href="https://www.github.com/dyscada/dyscada.github.io" target="_blank">
+        <a href="https://youtu.be/VNpfWPflwZs" target="_blank">
           <img src="imgs/yeonjun.png" alt="yeonjun" class="Yeonjun__avartar" />
         </a>
         <a href="https://www.github.com/dyscada/dyscada.github.io" target="_blank">
