--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
       <h1 class="contact__title">FAMILY</h1>
       <!-- <h2 class="contact__email">dyscada@gmail.com</h2> -->
       <div class="contact__links">
-        <a href="http://www.daeyang.org/Yeonu" target="_blank">
+        <a href="http://www.daeyang.org/Yonu" target="_blank">
           <img src="imgs/yeonu.png" alt="yeonu" class="Yeonu__avartar" />
         </a>
         <a href="https://youtu.be/VNpfWPflwZs" target="_blank">
