--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <a href="https://www.facebook.com/" target="_blank">
           <i class="fab fa-facebook-square"></i>
         </a>
-        <a href="http://192.168.0.112" target="_blank">
+        <a href="http://dyrtu.iptime.org:9999/" target="_blank">
           <i class="fas fa-ethernet"></i>
         </a>
       </div>
