--- a/index.html
+++ b/index.html
@@ -231,7 +231,10 @@
         <a href="https://www.github.com/dyscada/dyscada.github.io" target="_blank">
           <img src="imgs/taeyun.jpg" alt="taeyun" class="taeyun__avartar" />
         </a>
-        <a href="https://www.facebook.com/" target="_blank">
+        <!-- <a href="https://www.facebook.com/" target="_blank">
+          <i class="fab fa-facebook-square"></i>
+        </a> -->
+        <a href="http://192.168.0.61/" target="_blank">
           <i class="fab fa-facebook-square"></i>
         </a>
         <a href="http://dyrtu.iptime.org:9999/" target="_blank">
