--- a/index.html
+++ b/index.html
@@ -234,10 +234,13 @@
         <!-- <a href="https://www.facebook.com/" target="_blank">
           <i class="fab fa-facebook-square"></i>
         </a> -->
-        <a href="http://dyrtu.iptime.org:81/stream" target="_blank">
-          <i class="fab fa-facebook-square"></i>
+        <a href="http://dyrtu.iptime.org:2011/stream" target="_blank">
+          <i class="fas fa-video">CAM1</i>
         </a>
-        <a href="http://dyrtu.iptime.org:9999/" target="_blank">
+        <a href="http://dyrtu.iptime.org:2021/stream" target="_blank">
+          <i class="fas fa-video">CAM2</i>
+        </a>
+        <a href="http://dyrtu.iptime.org:2000/" target="_blank">
           <i class="fas fa-ethernet"></i>
         </a>
       </div>
