--- a/index.html
+++ b/index.html
@@ -234,7 +234,10 @@
         <!-- <a href="https://www.facebook.com/" target="_blank">
           <i class="fab fa-facebook-square"></i>
         </a> -->
-        <a href="http://dyrtu.iptime.org:2011/stream" target="_blank">
+        <!-- <a href="http://dyrtu.iptime.org:2011/stream" target="_blank">
+          <i class="fas fa-video">CAM1</i>
+        </a> -->
+        <a href="http://dyrtu.iptime.org:81/stream" target="_blank">
           <i class="fas fa-video">CAM1</i>
         </a>
         <a href="http://dyrtu.iptime.org:2021/stream" target="_blank">
