--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         <!-- <a href="http://dyrtu.iptime.org:2011/stream" target="_blank">
           <i class="fas fa-video">CAM1</i>
         </a> -->
-        <a href="http://dyrtu.iptime.org:81/stream" target="_blank">
+        <a href="http://dyrtu.iptime.org:" target="_blank">
           <i class="fas fa-video">CAM1</i>
         </a>
         <a href="http://dyrtu.iptime.org:2021/stream" target="_blank">
