daeyang_main start

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="icon" href="data:," />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="main.js" defer></script>
+    <script src="second.js" defer></script>
     <!-- <script src="script.js" defer></script> -->
     <link
       rel="stylesheet"
@@ -25,7 +26,10 @@
       integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous"
     />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/107/three.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/107/three.min.js"></script> -->
+    <script src="js/three.js"></script>
+    <script src="js/OrbitControls.js"></script>
+    <script src="js/OrbitControls.js"></script>
   </head>
   <body>
     <nav id="navbar">
@@ -237,10 +241,13 @@
         <!-- <a href="http://dyrtu.iptime.org:2011/stream" target="_blank">
           <i class="fas fa-video">CAM1</i>
         </a> -->
-        <a href="http://dyrtu.iptime.org:" target="_blank">
+        <!-- <a href="http://dyrtu.iptime.org:81/stream" target="_blank">
+          <i class="fas fa-video">CAM1</i>
+        </a> -->
+        <a href="http://dyrtu.iptime.org" target="">
           <i class="fas fa-video">CAM1</i>
         </a>
-        <a href="http://dyrtu.iptime.org:2021/stream" target="_blank">
+        <a href="http://dyrtu.iptime.org:2021/stream" target="">
           <i class="fas fa-video">CAM2</i>
         </a>
         <a href="http://dyrtu.iptime.org:2000/" target="_blank">
