--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
           <i class="fas fa-video">CAM1</i>
         </a>
         
-        <a href="http://dyrtu.iptime.org:2021/stream" target="">
+        <a href="http://dyrtu.iptime.org:2021/stream" target="_blank">
           <i class="fas fa-video">CAM2</i>
         </a>
         <a href="http://dyrtu.iptime.org:2000/" target="_blank">
